# tokonomics

./: .gitattributes  .gitignore  Makefile  README.md  REPORT.md  action.yml  pyproject.toml
.github/workflows/: bench.yml  dev.yml
bench/llama/: run_llama_bench.sh
bench/microkernel/: Makefile  bandwidth.c  driver.c  kernel.c
econ/: pricing.yaml
projection/: specs.yaml
results/measured/: bench_off.json  bench_on.json  cobalt100-n2.json  economics.json  llama_economics.json  llama_off.json  llama_on.json
results/projected/: crossover.json  economics.json
results/x86-dev/: economics.json  x86-dev.json
tests/: test_crossover.py  test_economics.py  test_gate.py  test_llama_ingest.py  test_merge_measured.py  test_schema.py
tokonomics/: __init__.py  cli.py  crossover.py  economics.py  gate.py  llama_ingest.py  loaders.py  measure_x86.py  merge_measured.py  model.py  report.py  roofline.py  schema.py
