[project]
name = "tokonomics"
version = "0.1.0"
description = "The Arm64 LLM-inference economics lab — tokens/$ and tokens/Joule, i8mm ablation, prefill/decode roofline, reproducible in free CI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
]

[project.scripts]
tokonomics = "tokonomics.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tokonomics"]

[tool.pytest.ini_options]
testpaths = ["tests"]
